--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -165,8 +165,8 @@
 <div class="container">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/">Home</a></li>
-      <li class="breadcrumb-item"><a href="/users/cart">Cart</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/">Home</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/users/cart">Cart</a></li>
       
     </ol>
   </nav>
