--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -69,7 +69,7 @@
 
 </style>
 <div class="container mt-4">
-  <nav aria-label="breadcrumb">
+  <nav aria-label="breadcrumb" class="text-dark">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="/">Home</a></li>
       <li class="breadcrumb-item"><a href="/users/cart">Cart</a></li>
