--- a/views/users/orderHistory.ejs
+++ b/views/users/orderHistory.ejs
@@ -112,9 +112,9 @@
 <div class="container mt-2">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/">Home</a></li>
-      <li class="breadcrumb-item"><a href="/users/profile">profile</a></li>
-      <li class="breadcrumb-item"><a href="/users/orders">orders</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/">Home</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/users/profile">profile</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/users/orders">orders</a></li>
       
     </ol>
   </nav>
