--- a/views/users/partials/footer.ejs
+++ b/views/users/partials/footer.ejs
@@ -13,12 +13,12 @@
                 <p>Your premium destination for sneakers and streetwear. We bring you the latest trends and classic styles.</p>
             </div>
             <div class="col-md-4">
-                <h5 class="footer-title">Quick Links</h5>
-                <ul class="list-unstyled footer-links">
-                    <li><a href="/about">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Shipping Info</a></li>
-                    <li><a href="#">Returns</a></li>
+                <h5 class="footer-title ">Quick Links</h5>
+                <ul class="list-unstyled footer-links ">
+                    <li><a class="text-dark" href="/about">About Us</a></li>
+                    <li><a class="text-dark" href="#">Contact</a></li>
+                    <li><a class="text-dark" href="#">Shipping Info</a></li>
+                    <li><a class="text-dark" href="#">Returns</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
