--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -124,8 +124,8 @@
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item"><a href="/users/shop">Shop</a></li>
+    <li class="breadcrumb-item"><a class="text-dark" href="/">Home</a></li>
+    <li class="breadcrumb-item"><a class="text-dark" href="/users/shop">Shop</a></li>
     <li class="breadcrumb-item active" aria-current="page"><%= product.name %></li>
   </ol>
 </nav>
