--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -91,8 +91,8 @@
 <div class="wishlist-container">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/">Home</a></li>
-      <li class="breadcrumb-item"><a href="/users/wishlist">wishlist</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/">Home</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/users/wishlist">wishlist</a></li>
       
     </ol>
   </nav>
