--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -33,7 +33,7 @@
                             ₹ <%= product.price.toFixed(2) %>
                             <% } %>
                     </p>
-                    <button class="product-card-btn">View Details</button>
+                    <button class="product-card-btn bg-dark">View Details</button>
                 </div>
             </a>
         <% }); %>
