--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -5,10 +5,10 @@
 <div class="container mt-5">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/">Home</a></li>
-      <li class="breadcrumb-item"><a href="/users/profile">profile</a></li>
-      <li class="breadcrumb-item"><a href="/users/orders">orders</a></li>
-      <li class="breadcrumb-item"><a href="/users/orders/<%=order.orderId %>"><%=order.orderId %></a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/">Home</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/users/profile">profile</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/users/orders">orders</a></li>
+      <li class="breadcrumb-item"><a class="text-dark" href="/users/orders/<%=order.orderId %>"><%=order.orderId %></a></li>
       
     </ol>
   </nav>
