--- a/views/users/partials/header.ejs
+++ b/views/users/partials/header.ejs
@@ -17,16 +17,16 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <div class="container">
-            <a class="navbar-brand" href="/users/home">Sneakify</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 ">
+        <div class="container  ">
+            <a class="navbar-brand " href="/users/home">Sneakify</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/users/home">Home</a>
+                        <a class="nav-link active link-underline" href="/users/home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/users/shop">Shop</a>
@@ -48,14 +48,14 @@
                     <a href="/users/cart" class="btn btn-outline-dark me-2">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
-                    <a href="/users/profile" class="btn btn-outline-dark">
+                    <a href="/users/profile" class="btn btn-outline-dark me-2">
                         <i class="fas fa-user"></i>
                     </a>
                     <% if (isAuthenticate) { %>
-                        <a href="/users/logout" class="btn btn-outline-dark">Logout</a>
+                        <a href="/users/logout" class="btn btn-outline-dark me-2">Logout</a>
                       <% } else { %>
-                        <a href="/users/login" class="btn btn-outline-dark">Login</a>
-                        <a href="/users/signup" class="btn btn-outline-dark">Signup</a>
+                        <a href="/users/login" class="btn btn-outline-dark me-2">Login</a>
+                        <a href="/users/signup" class="btn btn-outline-dark me-2">Signup</a>
                       <% } %>
 
 
