--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -29,9 +29,9 @@
 
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/users/profile">profile</a></li>
-        <li class="breadcrumb-item"><a href="/users/wallet">Wallet</a></li>
+        <li class="breadcrumb-item"><a class="text-dark" href="/">Home</a></li>
+        <li class="breadcrumb-item"><a class="text-dark" href="/users/profile">profile</a></li>
+        <li class="breadcrumb-item"><a class="text-dark" href="/users/wallet">Wallet</a></li>
         
       </ol>
     </nav>
