changed the blue colours to black in shop and home and do some minor changes in shop pages

--- a/views/users/partials/header.ejs
+++ b/views/users/partials/header.ejs
@@ -17,9 +17,9 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 border-bottom border-dark-subtle shadow-sm ">
         <div class="container  ">
-            <a class="navbar-brand " href="/users/home">Sneakify</a>
+            <a class="navbar-brand fw-bolder " href="/users/home">Sneakify</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
