--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -218,7 +218,7 @@
        
 
         <div class="mt-3 d-flex justify-content-between">
-          <button id="addToCart" data-product-id="<%= product._id %>" class="btn btn-primary btn-lg w-100">Add to Cart</button>
+          <button id="addToCart" data-product-id="<%= product._id %>" class="btn btn-dark btn-lg w-100">Add to Cart</button>
           <a class="btn btn-outline-dark me-2" onclick="addToWishlist('<%= product._id %>')">
             <i class="fas fa-heart"></i>
         </a>
@@ -301,13 +301,13 @@
   <h3>Related Products</h3>
   <div class="d-flex flex-wrap gap-4 p-5">
     <% relatedProducts.forEach(product => { %>
-    <a href="/users/shop">
+    <a class="text-decoration-none" href="/users/shop">
       <div class="product-card card shadow-sm" style="width: 18rem;">
         <img src="/<%= product.images[0] %>" class="card-img-top" alt="<%= product.name %>">
         <div class="card-body">
-          <h5 class="card-title"><%= product.name %></h5>
-          <p class="card-text">$<%= product.price.toFixed(2) %></p>
-          <a href="/users/productDetails/<%= product._id %>" class="btn btn-primary w-100">View Details</a>
+          <h5 class="card-title text-black "><%= product.name %></h5>
+          <p class="card-text text-black text-decoration-none">$<%= product.price.toFixed(2) %></p>
+          <a  href="/users/productDetails/<%= product._id %>" class="btn btn-dark w-100">View Details</a>
         </div>
     </a>
   </div>
