--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -14,14 +14,14 @@
     </div>
   </div>
   <div class="container-fluid">
-    <div class="row">
+    <div class="row   ">
       <!-- Sidebar Filters -->
-      <div class="col-lg-3 col-md-4 sidebar-filters">
-        <div class="card mb-4">
+      <div class="col-lg-3 col-md-4 sidebar-filters ">
+        <div class="card mb-4 h-100  ">
           <div class="card-header">
             <h5 class="mb-0">Filters</h5>
           </div>
-          <div class="card-body">
+          <div class="card-body min-vh-100">
             <!-- Size Filter -->
             <div class="mb-3">
               <h6>Size</h6>
